--- a/app/src/main/res/layout/action_bar_layout.xml
+++ b/app/src/main/res/layout/action_bar_layout.xml
@@ -4,11 +4,11 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:orientation="vertical">
-
-    <TextView
+    
+    <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="test"/>
+        android:layout_height="match_parent"
+        android:src="@drawable/sweet_music_icon"/>
 
 <!--    <android.support.v7.widget.AppCompatTextView
         android:id="@+id/tvTitle"
