--- a/app/src/main/res/layout/action_bar_layout.xml
+++ b/app/src/main/res/layout/action_bar_layout.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_gravity="center"
     android:orientation="vertical">
-    
-    <ImageView
-        android:layout_width="wrap_content"
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/sweet_music_icon"/>
+        android:background="@drawable/action_bar_rectangle">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/sweet_music_icon"/>
+
+    </LinearLayout>
 
 <!--    <android.support.v7.widget.AppCompatTextView
         android:id="@+id/tvTitle"
