Trying ot round out the edges of action bar

--- a/app/src/main/res/layout/action_bar_layout.xml
+++ b/app/src/main/res/layout/action_bar_layout.xml
@@ -5,10 +5,13 @@
     android:layout_gravity="center"
     android:orientation="vertical">
 
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/action_bar_rectangle">
+        android:background="@drawable/action_bar_rectangle"
+        >
 
         <ImageView
             android:layout_width="match_parent"
