Functioning navigation between fragments

--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -22,6 +22,7 @@
             app:layout_constraintVertical_bias="0.23000002" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/toolbar_main_menu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:menu="@menu/menu_toolbar"
