--- a/app/src/main/res/menu/menu_toolbar_acordes.xml
+++ b/app/src/main/res/menu/menu_toolbar_acordes.xml
@@ -3,19 +3,19 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/glosario_access_afinador"
+        android:id="@+id/glosario_access_acordes"
         android:icon="@drawable/ic_glosario2blanco"
         android:title="Glosario" />
     <item
-        android:id="@+id/metronomo_access"
+        android:id="@+id/metronomo_access_acordes"
         android:icon="@drawable/ic_metronomovector"
         android:title="Metronomo" />
     <item
-        android:id="@+id/afinador_access"
+        android:id="@+id/afinador_access_acordes"
         android:icon="@drawable/ic_tuner_logoblanco"
         android:title="Afinador" />
     <item
-        android:id="@+id/chord_access"
-        android:icon="@drawable/ic_corchea_blanco"
-        android:title="Acordes" />
+        android:id="@+id/home_access_acordes"
+        android:icon="@drawable/ic_homeicon"
+        android:title="Home" />
 </menu>
