--- a/app/src/main/res/menu/menu_toolbar_afinador.xml
+++ b/app/src/main/res/menu/menu_toolbar_afinador.xml
@@ -7,15 +7,15 @@
         android:icon="@drawable/ic_glosario2blanco"
         android:title="Glosario" />
     <item
-        android:id="@+id/metronomo_access"
+        android:id="@+id/metronomo_access_afinador"
         android:icon="@drawable/ic_metronomovector"
         android:title="Metronomo" />
     <item
-        android:id="@+id/afinador_access"
-        android:icon="@drawable/ic_tuner_logoblanco"
-        android:title="Afinador" />
+        android:id="@+id/home_access_afinador"
+        android:icon="@drawable/ic_homeicon"
+        android:title="Home" />
     <item
-        android:id="@+id/chord_access"
+        android:id="@+id/acordes_access_afinador"
         android:icon="@drawable/ic_corchea_blanco"
         android:title="Acordes" />
 </menu>
