--- a/app/src/main/res/layout/fragment_metronomo.xml
+++ b/app/src/main/res/layout/fragment_metronomo.xml
@@ -40,6 +40,17 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="BPM"/>
+
     </LinearLayout>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/toolbar_main_menu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        app:itemIconTint="#FFFFFF"
+        app:itemTextColor="#FFFFFF"
+        app:labelVisibilityMode="labeled"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/menu_toolbar_metronomo" />
 
 </LinearLayout>
