--- a/app/src/main/res/layout/fragment_afinador.xml
+++ b/app/src/main/res/layout/fragment_afinador.xml
@@ -1,14 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/clavijero"
     tools:context=".Afinador">
 
     <!-- TODO: Update blank fragment layout -->
+
     <TextView
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="Afinador"
+        android:textAlignment="center"
+        android:textSize="9pt"
+        tools:layout_editor_absoluteX="-16dp"
+        tools:layout_editor_absoluteY="16dp" />
 
-</FrameLayout>
+    <Button
+        android:id="@+id/bt_3ra"
+        android:layout_width="@dimen/afinador_boton_size"
+        android:layout_height="@dimen/afinador_boton_size"
+        android:layout_marginTop="85dp"
+        android:background="@drawable/rounded_button"
+        android:text="3ra"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/bt_6ta"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/bt_4ta"
+        android:layout_width="@dimen/afinador_boton_size"
+        android:layout_height="@dimen/afinador_boton_size"
+        android:layout_marginTop="85dp"
+        android:background="@drawable/rounded_button"
+        android:text="4ta"
+        app:layout_constraintEnd_toStartOf="@+id/bt_1ra"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/bt_2da"
+        android:layout_width="@dimen/afinador_boton_size"
+        android:layout_height="@dimen/afinador_boton_size"
+        android:layout_marginTop="180dp"
+        android:background="@drawable/rounded_button"
+        android:text="2da"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/bt_5ta"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/bt_5ta"
+        android:layout_width="@dimen/afinador_boton_size"
+        android:layout_height="@dimen/afinador_boton_size"
+        android:layout_marginTop="180dp"
+        android:background="@drawable/rounded_button"
+        android:text="5ta"
+        app:layout_constraintEnd_toStartOf="@+id/bt_2da"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/bt_1ra"
+        android:layout_width="@dimen/afinador_boton_size"
+        android:layout_height="@dimen/afinador_boton_size"
+        android:layout_marginTop="280dp"
+        android:background="@drawable/rounded_button"
+        android:text="1ra"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/bt_4ta"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/bt_6ta"
+        android:layout_width="@dimen/afinador_boton_size"
+        android:layout_height="@dimen/afinador_boton_size"
+        android:layout_marginTop="280dp"
+        android:background="@drawable/rounded_button"
+        android:text="6ta"
+        app:layout_constraintEnd_toStartOf="@+id/bt_3ra"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
