--- a/app/src/main/res/layout/fragment_afinador.xml
+++ b/app/src/main/res/layout/fragment_afinador.xml
@@ -91,5 +91,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/toolbar_menu_afinador"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        app:itemIconTint="#FFFFFF"
+        app:itemTextColor="#FFFFFF"
+        app:labelVisibilityMode="labeled"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/menu_toolbar_afinador" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
