--- a/app/src/main/res/layout/fragment_metronomo.xml
+++ b/app/src/main/res/layout/fragment_metronomo.xml
@@ -43,7 +43,7 @@
 
     </LinearLayout>
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/toolbar_main_menu"
+        android:id="@+id/toolbar_menu_metronomo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
