Added view for acordes tool

--- a/app/src/main/res/layout/fragment_acordes.xml
+++ b/app/src/main/res/layout/fragment_acordes.xml
@@ -1,14 +1,184 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     tools:context=".AcordesFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Acordes Fragment" />
+        android:layout_height="match_parent">
 
-</FrameLayout>
+        <Spinner
+            android:id="@+id/spChordName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/imgChord"
+            android:layout_width="235dp"
+            android:layout_height="173dp"
+            android:layout_marginTop="@dimen/wideMargin"
+            android:src="@drawable/menor_septima_mayor"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/spChordName" />
+
+
+        <Button
+            android:id="@+id/bt_NotaChord1"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/rounded_button"
+            android:text="1"
+            app:layout_constraintEnd_toStartOf="@+id/AcordeName1"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imgChord" />
+
+        <TextView
+            android:id="@+id/AcordeName1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="100dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="100dp"
+            android:text="Raiz"
+            android:textSize="30sp"
+            app:layout_constraintEnd_toStartOf="@+id/Acorde1"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/bt_NotaChord1"
+            app:layout_constraintTop_toBottomOf="@+id/imgChord" />
+
+        <TextView
+            android:id="@+id/Acorde1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="C"
+            android:textSize="30sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/AcordeName1"
+            app:layout_constraintTop_toBottomOf="@+id/imgChord" />
+
+        <Button
+            android:id="@+id/bt_NotaChord2"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/rounded_button"
+            android:text="3"
+            app:layout_constraintEnd_toStartOf="@+id/AcordeName2"
+            app:layout_constraintHorizontal_bias="0.131"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/bt_NotaChord1" />
+
+        <TextView
+            android:id="@+id/AcordeName2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="60dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="50dp"
+            android:text="Tercera Mayor"
+            android:textSize="30sp"
+            app:layout_constraintEnd_toStartOf="@+id/Acorde2"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/bt_NotaChord2"
+            app:layout_constraintTop_toBottomOf="@+id/AcordeName1" />
+
+        <TextView
+            android:id="@+id/Acorde2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="E"
+            android:textSize="30sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/AcordeName2"
+            app:layout_constraintTop_toBottomOf="@+id/Acorde1" />
+
+        <Button
+            android:id="@+id/bt_NotaChord3"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/rounded_button"
+            android:text="5"
+            app:layout_constraintEnd_toStartOf="@+id/AcordeName3"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/bt_NotaChord2" />
+
+        <TextView
+            android:id="@+id/AcordeName3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="50dp"
+            android:text="Quinta justa"
+            android:textSize="30sp"
+            app:layout_constraintEnd_toStartOf="@+id/Acorde3"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/bt_NotaChord3"
+            app:layout_constraintTop_toBottomOf="@+id/AcordeName2" />
+
+        <TextView
+            android:id="@+id/Acorde3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="G"
+            android:textSize="30sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/AcordeName3"
+            app:layout_constraintTop_toBottomOf="@+id/Acorde2" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:text="Ascendente"
+            android:background="@color/colorPrimary"
+            android:textColor="#FFFFFF"
+            app:layout_constraintEnd_toStartOf="@+id/button2"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/AcordeName3" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:text="Descendente"
+            android:background="@color/colorPrimary"
+            android:textColor="#FFFFFF"
+            app:layout_constraintEnd_toStartOf="@+id/button3"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/button"
+            app:layout_constraintTop_toBottomOf="@+id/AcordeName3" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:text="Armonico"
+            android:background="@color/colorPrimary"
+            android:textColor="#FFFFFF"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/button2"
+            app:layout_constraintTop_toBottomOf="@+id/AcordeName3" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
