--- a/app/src/main/res/layout/fragment_metronomo.xml
+++ b/app/src/main/res/layout/fragment_metronomo.xml
@@ -29,7 +29,7 @@
             android:text="Play" />
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/etBPM"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
