--- a/app/src/main/res/menu/menu_toolbar.xml
+++ b/app/src/main/res/menu/menu_toolbar.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/glosario_access_afinador"
+        android:id="@+id/glosario_access"
         android:icon="@drawable/ic_glosario2blanco"
         android:title="Glosario" />
     <item
