--- a/app/src/main/res/layout/fragment_acordes.xml
+++ b/app/src/main/res/layout/fragment_acordes.xml
@@ -180,5 +180,16 @@
             app:layout_constraintStart_toEndOf="@+id/button2"
             app:layout_constraintTop_toBottomOf="@+id/AcordeName3" />
 
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/toolbar_acordes_menu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            app:itemIconTint="#FFFFFF"
+            app:itemTextColor="#FFFFFF"
+            app:labelVisibilityMode="labeled"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:menu="@menu/menu_toolbar_acordes" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
