--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -27,7 +27,20 @@
         android:id="@+id/glosarioFragment"
         android:name="com.programoviles.sweetmusic.Glosario"
         android:label="fragment_glosario"
-        tools:layout="@layout/fragment_glosario" />
+        tools:layout="@layout/fragment_glosario" >
+        <action
+            android:id="@+id/action_glosarioFragment_to_afinador"
+            app:destination="@id/afinador" />
+        <action
+            android:id="@+id/action_glosarioFragment_to_metronomo"
+            app:destination="@id/metronomo" />
+        <action
+            android:id="@+id/action_glosarioFragment_to_acordesFragment"
+            app:destination="@id/acordesFragment" />
+        <action
+            android:id="@+id/action_glosarioFragment_to_mainMenuFragment"
+            app:destination="@id/mainMenuFragment" />
+    </fragment>
     <fragment
         android:id="@+id/acordesFragment"
         android:name="com.programoviles.sweetmusic.AcordesFragment"
