--- a/app/src/main/res/layout-land/fragment_afinador.xml
+++ b/app/src/main/res/layout-land/fragment_afinador.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Afinador">
@@ -10,7 +11,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="560dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="120dp"
         android:layout_marginEnd="120dp"
         android:background="@drawable/clavijero"
@@ -122,3 +123,4 @@
         app:menu="@menu/menu_toolbar_afinador" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
