--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -12,7 +12,9 @@
         tools:layout="@layout/fragment_main_menu" >
         <action
             android:id="@+id/action_mainMenuFragment_to_glosario"
-            app:destination="@id/glosarioFragment" />
+            app:destination="@id/glosarioFragment"
+            app:popUpTo="@id/mainMenuFragment"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_mainMenuFragment_to_acordesFragment"
             app:destination="@id/acordesFragment" />
@@ -24,7 +26,9 @@
             app:destination="@id/afinador" />
         <action
             android:id="@+id/action_mainMenuFragment_to_bloqueUnidad"
-            app:destination="@id/bloqueUnidad" />
+            app:destination="@id/bloqueUnidad"
+            app:popUpTo="@id/mainMenuFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/glosarioFragment"
