--- a/app/src/main/res/layout/fragment_bloque_leccion.xml
+++ b/app/src/main/res/layout/fragment_bloque_leccion.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+<FrameLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".BloqueLeccion">
@@ -9,6 +10,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Bloque Leccion" />
+        android:text="Bloque Leccion (Work in Progress)" />
 
 </FrameLayout>
+</layout>
