Fixed appbar and colors REady for Pre-release

--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -14,6 +14,7 @@
             android:layout_height="100dp"
             android:background="@drawable/rounded_button"
             android:text="Unidad 1"
+            android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/bt_unidad2"
             app:layout_constraintHorizontal_bias="0.5"
@@ -27,6 +28,7 @@
             android:layout_height="100dp"
             android:background="@drawable/rounded_button"
             android:text="Unidad 2"
+            android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -41,6 +43,7 @@
             android:layout_height="100dp"
             android:background="@drawable/rounded_button"
             android:text="Unidad 3"
+            android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/bt_unidad4"
             app:layout_constraintHorizontal_bias="0.5"
@@ -55,6 +58,7 @@
             android:layout_height="100dp"
             android:background="@drawable/rounded_button"
             android:text="Unidad 4"
+            android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -69,6 +73,7 @@
             android:layout_height="100dp"
             android:background="@drawable/rounded_button"
             android:text="Unidad 5"
+            android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/bt_unidad6"
             app:layout_constraintHorizontal_bias="0.5"
@@ -82,6 +87,7 @@
             android:layout_height="100dp"
             android:background="@drawable/rounded_button"
             android:text="Unidad 6"
+            android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
